mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -1466,11 +1466,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="image-zone">
-                                            <img src="./img/theorie_ensembles.png"
-                                                alt="Concepts de la théorie des ensembles"
-                                                style="max-width: 100%; height: auto;" />
-                                        </div>
+    
                                     </div>
                                 </section>
 
@@ -1735,7 +1731,8 @@
                                                 <!-- Ensemble d'ensembles -->
                                                 <circle cx="100" cy="100" r="70" fill="blue" />
                                                 <circle cx="140" cy="100" r="30" fill="red" />
-                                                <text x="50" y="170" style="font-size: 0.5em; fill: white;">Ensemble
+                                                <text x="135" y="105" style="font-size: 0.5em; fill: black;">A</text>
+                                                <text x="15" y="200" style="font-size: 0.5em; fill: black;">Ensemble
                                                     d'ensembles</text>
                                             </svg>
                                             <p style="font-size: 0.6em;text-align: center;">A : élément de
@@ -1772,7 +1769,7 @@
                                                 <!-- Logique floue illustration -->
                                                 <rect x="30" y="75" width="140" height="20" fill="red" />
                                                 <rect x="30" y="75" width="98" height="20" fill="blue" />
-                                                <text x="30" y="110" style="font-size: 0.6em;fill: white;">70%
+                                                <text x="30" y="110" style="font-size: 0.6em;fill: black;">70%
                                                     probabilité</text>
                                             </svg>
                                             <p style="font-size: 0.7em;text-align: center;">Exemple d'une vérité
