mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -3396,7 +3396,7 @@
                             </section>
                             <section>
                                 <section>
-                                    <h1>Annexes</h1>
+                                    <h1  style="font-size: 0.8em;">Annexes</h1>
 
                                     <ul>
                                         <li>Symboles et concepts utilisés pour décrire les ontologies</li>
@@ -3407,11 +3407,11 @@
 
                                 <section>
 
-                                    <h2 style="font-size: 0.8em;">Symboles et concepts utilisés pour décrire les
+                                    <h2 style="font-size: 0.7em;">Symboles et concepts utilisés pour décrire les
                                         ontologies
                                     </h2>
 
-                                    <p style="font-size: 0.7em;">Tableau des définitions et des symboles
+                                    <p style="font-size: 0.6em;">Tableau des définitions et des symboles
                                     </p>
 
                                     <div class="scrollable-table">
