mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -364,11 +364,16 @@
                                             <ol>
                                                 <li>Le sens dans un contexte technologique</li>
                                                 <li>Sémiotique : L'étude des signes</li>
+                                                <li>La sémantique</li>
+                                                <li>La syntaxe</li>
                                                 <li>Sémantique et Pragmatique</li>
                                                 <li>Dénotation et Connotation</li>
                                                 <li>Rhétorique et Structuration du Sens</li>
+                                                <li>Du concept au graphe de concepts</li>
+                                                <li>Extension au monde informatique</li>
+                                                <li>Communautés, Domaines et Concepts Multiples</li>
                                                 <li>Application à l'Interopérabilité</li>
-                                                <li>Conclusion de la Section</li>
+                                                
                                             </ol>
                                             <p>Il faut également comprendre ce que sont la connaissance, l'information
                                                 et les données ></p>
@@ -376,7 +381,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;text-transform: none;">A.2 Le sens dans un contexte
+                                        <h3 style="font-size: 0.8em;text-transform: none;">A.1 Le sens dans un contexte
                                             technologique</h3>
                                     </div>
                                     <div class="content-zone">
@@ -397,7 +402,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;text-transform: none;">A.3 Sémiotique : L'étude des
+                                        <h3 style="font-size: 0.8em;text-transform: none;">A.2 Sémiotique : L'étude des
                                             signes</h3>
                                     </div>
                                     <div class="content-zone">
@@ -418,7 +423,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;text-transform: none;">A.4 La sémantique</h3>
+                                        <h3 style="font-size: 0.8em;text-transform: none;">A.3 La sémantique</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -443,7 +448,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">A.5 La Syntaxe</h3>
+                                        <h3 style="font-size: 0.8em;">A.4 La Syntaxe</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -469,7 +474,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;transform: none;">A.6 Sémantique et Pragmatique</h3>
+                                        <h3 style="font-size: 0.8em;transform: none;">A.5 Sémantique et Pragmatique</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -494,7 +499,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;transform: none;">A.7 Dénotation et connotation</h3>
+                                        <h3 style="font-size: 0.8em;transform: none;">A.6 Dénotation et connotation</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -517,7 +522,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;;transform: none;">A.8 Rhétorique et Structuration
+                                        <h3 style="font-size: 0.8em;;transform: none;">A.7 Rhétorique et Structuration
                                             du Sens</h3>
                                     </div>
                                     <div class="content-zone">
@@ -543,7 +548,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">A.9 Du concept au graphe de concepts</h3>
+                                        <h3 style="font-size: 0.8em;">A.8 Du concept au graphe de concepts</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -570,7 +575,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">A.8 Extension au Monde Informatique</h3>
+                                        <h3 style="font-size: 0.8em;">A.9 Extension au Monde Informatique</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -600,7 +605,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">Communautés, Domaines et concepts multiples</h3>
+                                        <h3 style="font-size: 0.8em;">A.10 Communautés, Domaines et concepts multiples</h3>
                                     </div>
                                     <div class="image-zone">
                                         <img src="./img/ContextesMultiples.png" alt="ContextesMultiples"
@@ -618,7 +623,7 @@
 
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">Application à l'Interopérabilité</h3>
+                                        <h3 style="font-size: 0.8em;">A.11 Application à l'Interopérabilité</h3>
                                     </div>
 
                                     <p style="font-size: 0.7em;text-align: left;">L'interopérabilité sémantique repose
