mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -1344,7 +1344,7 @@
                                                     <ol>
                                                         <li>Logique et théorie des ensembles</li>
                                                         <li>Logique: principes Fondamentaux</li>
-                                                        <li>Thérorie des ensembles: concepts de base</li>
+                                                        <li>Théorie des ensembles: concepts de base</li>
                                                         <li>Théorie des ensembles: relations</li>
                                                         <li>Théorie des ensembles: caractéristique des relations</li>
                                                         <li>Théorie des ensembles: types de relation</li>
@@ -2826,7 +2826,7 @@
                                                 relier des systèmes,
                                                 applications et données ayant des vocabulaires ou modèles
                                                 différents.<br><br>
-                                                Les ontologies offrent deux approches complémentaires :</p>
+                                                Les ontologies permettent deux approches complémentaires :</p>
                                             <ul style="font-size: 0.5em;">
                                                 <li>
                                                     <b>Alignement avec des ontologies préexistantes</b>
