Ontology visualisation material added

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -308,12 +308,12 @@
                                         l'interopérabilité sémantique, les participants sont censés pouvoir:</p>
                                     <ul>
                                         <li>comprendre les bases de la sémantique et des ontologies</li>
-                                        <li>représenter en OWL une ontologie applicative de domaine
+                                        <li>représenter en OWL une ontologie applicative de domaine simple
                                         </li>
-                                        <li>contribueer à l'établissement de l'interopérabilité sémantique</li>
+                                        <li>contribuer à l'établissement de l'interopérabilité sémantique</li>
                                     </ul>
-                                    <p style="text-align: left;">L'ingénierie informatique de l'interopérabilité et des
-                                        ontologies n'est pas adressée.</p>
+                                    <p style="text-align: left;">L'ingénierie informatique de l'interopérabilité et celle des
+                                        ontologies ne sont pas adressées.</p>
                                 </section>
                             </section>
                             <section>
@@ -1391,7 +1391,7 @@
                                             <p style="font-size: 0.8em;text-align: left;">La logique est un outil
                                                 puissant pour exprimer des affirmations :</p>
                                             <ul style="font-size: 0.7em;">
-                                                <li><strong>Proposition :</strong> Une affirmation pouvant être
+                                                <li><strong>Proposition :</strong> Une affirmation(ou assertion) pouvant être
                                                     vraie ou
                                                     fausse.</li>
                                                 <li><strong>Connecteurs :</strong> ET (∧), OU (∨), NON (¬),
