--- a/test2.html
+++ b/test2.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>W2UI Demo: layout/1</title>
-    <link rel="stylesheet" type="text/css" href="https://rawgit.com/vitmalina/w2ui/master/dist/w2ui.min.css">
+    <link rel="stylesheet" type="text/css" href="w2ui-2.0.min.css" />
+    <script src="lib/w2ui-2.0.min.js"></script>
 </head>
 <body>
 
 <div id="layout" style="width: 900px; height: 400px;"></div>
 
 <script type="module">
-import { w2layout } from 'https://rawgit.com/vitmalina/w2ui/master/dist/w2ui.es6.min.js'
+
 
 let pstyle = 'border: 1px solid #efefef; padding: 5px'
 new w2layout({
