--- a/OntologyViewer.html
+++ b/OntologyViewer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OWL Validation</title>
-    <link rel="stylesheet" type="text/css" href=https://cdn.jsdelivr.net/npm/w2ui@2.0.0/w2ui-2.0.min.css>
+    <link rel="stylesheet" type="text/css" href="w2ui-2.0.min.css">
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@5/dist/backdrop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -21,7 +21,7 @@
     <script src="https://unpkg.com/popper.js@1.14.7/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-popper@1.0.5/cytoscape-popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@5/dist/tippy-bundle.iife.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/w2ui@2.0.0/w2ui-2.0.min.js"></script>
+    <script src="lib/w2ui-2.0.min.js"></script>
     <script src="https://unpkg.com/layout-base/layout-base.js"></script>
     <script src="https://unpkg.com/webcola/WebCola/cola.min.js"></script>
     <script src="https://unpkg.com/cytoscape-cola/cytoscape-cola.js"></script>
