ontologyViewer update view layout hide grab show menus updated and layout hidge graph show delete implemented

--- a/OntologyViewer.html
+++ b/OntologyViewer.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OWL Validation</title>
-    <link rel="stylesheet" type="text/css" href="w2ui-2.0.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@5/dist/backdrop.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/w2ui-2.0.min.css">
+    <link rel="stylesheet" href="css/backdrop.css">
+    <link rel="stylesheet" href="css/all.min.css" />
 
-    <script src="https://unpkg.com/rdflib/dist/rdflib.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/pure-uuid@latest/uuid.min.js"></script>
-    <script src="https://unpkg.com/ulid@2.3.0/dist/index.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cytoscape/dist/cytoscape.min.js"></script>
-    <script src="https://unpkg.com/layout-base/layout-base.js"></script>
-    <script src="https://unpkg.com/cose-base/cose-base.js"></script>
-    <script src="https://unpkg.com/cytoscape-fcose/cytoscape-fcose.js"></script>
-    <script src="https://unpkg.com/cytoscape-undo-redo/cytoscape-undo-redo.js"></script>
+    <script src="lib/rdflib.min.js"></script>
+    <script src="lib/uuid.min.js"></script>
+    <script src="lib/index.umd.js"></script>
+    <script src="lib/cytoscape.min.js"></script>
+    <script src="lib/layout-base.js"></script>
+    <script src="lib/cose-base.js"></script>
+    <script src="lib/cytoscape-fcose.js"></script>
+    <script src="lib/cytoscape-undo-redo.js"></script>
     <script src="lib/cytoscape-expand-collapse.js"></script>
-    <script src="https://unpkg.com/popper.js@1.14.7/dist/umd/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cytoscape-popper@1.0.5/cytoscape-popper.min.js"></script>
-    <script src="https://unpkg.com/tippy.js@5/dist/tippy-bundle.iife.js"></script>
+    <script src="lib/popper.js"></script>
+    <script src="lib/cytoscape-popper.min.js"></script>
+    <script src="lib/tippy-bundle.iife.js"></script>
     <script src="lib/w2ui-2.0.min.js"></script>
-    <script src="https://unpkg.com/layout-base/layout-base.js"></script>
-    <script src="https://unpkg.com/webcola/WebCola/cola.min.js"></script>
-    <script src="https://unpkg.com/cytoscape-cola/cytoscape-cola.js"></script>
+    <script src="lib/layout-base.js"></script>
+    <script src="lib/cola.min.js"></script>
+    <script src="lib/cytoscape-cola.js"></script>
     <!-- Dagre.js (Required for cytoscape-dagre) -->
-    <script src="https://unpkg.com/dagre/dist/dagre.min.js"></script>
+    <script src="lib/dagre.min.js"></script>
     <!-- Cytoscape-Dagre Extension -->
-    <script src="https://unpkg.com/cytoscape-dagre/cytoscape-dagre.js"></script>
-    <script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
+    <script src="lib/cytoscape-dagre.js"></script>
+    <script src="lib/i18next.min.js"></script>
 
     <style>
         /* colors for protege
