ontologyViewer update view layout hide grab show menus updated and layout hidge graph show delete implemented

--- a/test2.html
+++ b/test2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>W2UI Demo: layout/1</title>
-    <link rel="stylesheet" type="text/css" href="w2ui-2.0.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/w2ui-2.0.min.css" />
     <script src="lib/w2ui-2.0.min.js"></script>
 </head>
 <body>
