--- a/test2.html
+++ b/test2.html
@@ -2,8 +2,34 @@
 <html>
 <head>
     <title>W2UI Demo: layout/1</title>
-    <link rel="stylesheet" type="text/css" href="css/w2ui-2.0.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OWL Validation</title>
+    <link rel="stylesheet" type="text/css" href="css/w2ui-2.0.min.css">
+    <link rel="stylesheet" href="css/backdrop.css">
+    <link rel="stylesheet" href="css/all.min.css" />
+
+    <script src="lib/rdflib.min.js"></script>
+    <script src="lib/uuid.min.js"></script>
+    <script src="lib/index.umd.js"></script>
+    <script src="lib/cytoscape.min.js"></script>
+    <script src="lib/layout-base.js"></script>
+    <script src="lib/cose-base.js"></script>
+    <script src="lib/cytoscape-fcose.js"></script>
+    <script src="lib/cytoscape-undo-redo.js"></script>
+    <script src="lib/cytoscape-expand-collapse.js"></script>
+    <script src="lib/popper.js"></script>
+    <script src="lib/cytoscape-popper.min.js"></script>
+    <script src="lib/tippy-bundle.iife.js"></script>
     <script src="lib/w2ui-2.0.min.js"></script>
+    <script src="lib/layout-base.js"></script>
+    <script src="lib/cola.min.js"></script>
+    <script src="lib/cytoscape-cola.js"></script>
+    <!-- Dagre.js (Required for cytoscape-dagre) -->
+    <script src="lib/dagre.min.js"></script>
+    <!-- Cytoscape-Dagre Extension -->
+    <script src="lib/cytoscape-dagre.js"></script>
+    <script src="lib/i18next.min.js"></script>
 </head>
 <body>
 
