--- a/OntologyViewer.html
+++ b/OntologyViewer.html
@@ -133,6 +133,7 @@
 </head>
 
 <body>
+
     <div id="app" style="width: 100%; height: 70vh;">
         <div id="mainLayout" style="height: calc(100% - 40px);" />
     </div>
@@ -531,7 +532,7 @@
         }
 
         const script = document.createElement("script");
-        script.src = "https://unpkg.com/cytoscape-cola/cytoscape-cola.js";
+        script.src = "lib/cytoscape-cola.js";
         script.onload = function () {
             console.log("Cytoscape-Cola loaded successfully");
             cytoscape.use(cytoscapeCola);
@@ -539,7 +540,7 @@
         document.head.appendChild(script);
 
         const script2 = document.createElement("script");
-        script2.src = "https://unpkg.com/cytoscape-dagre/cytoscape-dagre.js";
+        script2.src = "lib/cytoscape-dagre.js";
         script2.onload = function () {
             console.log("Cytoscape-Dagre loaded successfully");
             cytoscape.use(cytoscapeDagre);
